app/scripts/kubernetes/app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sfapp
  labels:
    purpose: sfapp
spec:
  containers:
  - name: sfapp
    image: gcr.io/sfdatascience-216716/sfapp:v2.2
