app/scripts/kubernetes/deploy-app.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sfapp
  labels:
    app: sfapp
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sfapp
    spec:
      containers:
      - name: sfapp
        image: sfapp:v2.2
        ports:
        - containerPort: 80
          protocol: TCP
      restartPolicy: Always
